# Neumann

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  version.cmake
.github/workflows/: pipeline.yml
example/: CMakeLists.txt  main.cpp
example/src/: main.cpp  main.h
src/: CMakeLists.txt  bus.hpp  neumann.cpp  neumann.hpp  neumann_version.h.in
test/: CMakeLists.txt  bus_test.cpp  main.cpp
test/src/: bus_test.cpp  main.hpp
